--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Image Filter App</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="./script.js" defer></script>
     </head>
     <body>
         <h1>Jack And Chris</h1>
