--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Image Filter App</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="./script.js" defer></script>
+        <script src="./script.js" type="module" defer></script>
     </head>
     <body>
         <header>
