added UI button functionality

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
                     </div>
 
                     <div>
-                        <input type="radio" id="blur" value="blur" name="filter">
-                        <label for="blur">Blur</label>
+                        <input type="radio" id="box-blur" value="box-blur" name="filter">
+                        <label for="box-blur">Box Blur</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="gaussian-blur" value="gaussian-blur" name="filter">
+                        <label for="gaussian-blur">Gaussian Blur</label>
                     </div>
 
                     <div>
@@ -36,8 +41,23 @@
                     </div>
 
                     <div>
-                        <input type="radio" id="black-white" value="black-white" name="filter">
-                        <label for="black-white">Black and White</label>
+                        <input type="radio" id="greyscale" value="greyscale" name="filter">
+                        <label for="greyscale">Greyscale</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="emboss" value="emboss" name="filter">
+                        <label for="emboss">Emboss</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="sharpen" value="sharpen" name="filter">
+                        <label for="sharpen">Sharpen</label>
+                    </div>
+
+                    <div>
+                        <input type="radio" id="ridge" value="ridge" name="filter">
+                        <label for="ridge">Ridge</label>
                     </div>
 
                     <div>
