--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Image Filter App</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
         <script src="./script.js" type="module" defer></script>
     </head>
     <body>
@@ -54,7 +55,9 @@
             
         </div>
 
-        <div class="image" style="width:50px; height:50px; border:1px solid black"></div>
+        <div class="image">
+            <canvas></canvas>
+        </div>
 
     </body>
 </html>
