add monochrome and reset buttons

--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
                         <input type="radio" id="ridge" value="ridge" name="filter">
                         <label for="ridge">Ridge</label>
 
+                        <input type="radio" id="monochrome" value="monochrome" name="filter">
+                        <label for="monochrome">Monochrome</label>
+
                 </fieldset>
             </div>
 
             <button type="button" id="apply-button">Apply</button>
+            <button type="button" id="reset-button">Reset</button>
 
             <div class="submit">
                 <input type="file" id="uploaded-file">
